# SkillMatch-AI

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/ai/: scoring.py  similarity.py  skills.py
backend/api/: analyze.py  analyze_pdf.py  rank_resumes.py
backend/parser/: pdf_parser.py
frontend/: index.html
frontend/src/: App.jsx
