[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pdfplumber>=0.11.9",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.0",
]
